--- a/django_project/login/templates/base.html
+++ b/django_project/login/templates/base.html
@@ -78,7 +78,7 @@
 
 <div class="container login-container">
     <div class="row">
-        <div class="col-md-6 login-form-1">
+        <div class="col-md-6 login-form-1 my_login">
             <h3>Login</h3>
         {%block login %}
         {%endblock %}
