--- a/django_project/login/templates/profile.html
+++ b/django_project/login/templates/profile.html
@@ -71,10 +71,16 @@
     </td>
 </tr>
 
+<tr>
+     <td colspan="2">
+
+        <a  class="btn btn-primary btn-lg btn-block" href="/update">Edit  my account </a>
+
+    </td>
     <tr>
      <td colspan="2">
 
-        <a  class="btn btn-primary btn-lg btn-block" href="/delete/profile">delete my account </aclass>
+        <a  class="btn btn-primary btn-lg btn-block" href="/delete/profile">delete my account </a>
 
     </td>
 </tr>
